# mpdungeon2

./: CLAUDE.md  Cargo.toml  docker-compose.yml  postgrestools.jsonc
migrations/: 20250424233112_init.down.sql  20250424233112_init.up.sql  20250425040353_seed_data.up.sql  20250503111230_room_gen.down.sql  20250503111230_room_gen.up.sql
postgres/: Dockerfile
postgres/scripts/: 01_pg_tracing.sh  02_enable_pg_tracing.sql
sql/: create_player.sql  get_chat.sql  get_world_entities.sql  insert_command.sql  login.sql  say.sql
src/: draw.rs  main.rs  networking.rs  state.rs
